<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <EditText android:id="@+id/config_IP_server"
        android:title="@string/config_IP_server"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="3"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/aboutAppSGCL"
                android:title="@string/aboutAppSGCL"/>
            <item android:id="@+id/aboutConfiguration"
                android:title="@string/aboutConfiguration"/>
        </menu>
    </item>
    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>
