<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <EditText android:id="@+id/barcode_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/barcode_search"
        android:layout_above="@+id/scan_button"
        android:layout_alignParentStart="true" />
    <Button android:id="@+id/enter_manual_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_scan"
        android:clickable="false"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/scan_button" />
    <Button android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:clickable="false"
        android:layout_below="@+id/enter_manual_barcode"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/scan_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_below="@+id/scan_button"
        android:layout_alignStart="@+id/scan_content" />
    <TextView
        android:id="@+id/scan_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scan_format" />
    <TextView
        android:id="@+id/productsFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scan_content" />
    <ListView android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"
        android:layout_below="@+id/productsFound" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productsFound"
        android:id="@android:id/empty"
        android:text="SIN DATOS"
        android:textStyle="bold" />
</RelativeLayout>
